Fix handling of ByteString node ids with null bytes

We used the UA_NODEID_BYTESTRING_ALLOC() macro from open62541
which uses strlen() internally. This generated incomplete or
even empty ByteString identifiers.

This change modifies the node id conversion to use the custom
converter function from QOpen62541ValueConverter.

[ChangeLog][Qt OPC UA] Fix a bug that prevented ByteString node ids
    with null bytes from being used.

Task-number: QTBUG-134944
Pick-to: 6.9 6.8
Change-Id: I29e845f7e1dcdd9f737ba9a0c0e14400c5d1a937
Reviewed-by: Frank Meerkoetter <frank.meerkoetter@basyskom.com>