tests/open62541-testserver/main.cpp
@@ -314,6 +314,7 @@ int main()
     server.addServerStatusTypeTestNodes(testFolder);
 
     server.addUnreadableVariableNode(testFolder);
+    server.addByteStringNodeIdWithNullIdVariableNode(testFolder);
 
     // Add test nodes for the generic type decoder
     auto result = server.addEncoderTestModel();
