tests/open62541-testserver/testserver.h
@@ -92,6 +92,8 @@ public:
 
     UA_StatusCode addUnreadableVariableNode(const UA_NodeId &parent);
 
+    UA_StatusCode addByteStringNodeIdWithNullIdVariableNode(const UA_NodeId &parent);
+
     static UA_StatusCode multiplyMethod(UA_Server *server, const UA_NodeId *sessionId, void *sessionHandle,
                                             const UA_NodeId *methodId, void *methodContext,
                                             const UA_NodeId *objectId, void *objectContext,
